--- a/client/app/_Components/Card/Card.module.css
+++ b/client/app/_Components/Card/Card.module.css
@@ -1,4 +1,4 @@
-  .card {
+.card {
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -8,50 +8,51 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-  
-  .card:hover {
+}
+
+.card:hover {
     transform: scale(1.05);
-  }
-  
-  .profileImage {
+}
+
+.profileImage {
     border-radius: 50%;
     margin-bottom: 10px;
-  }
-  
-  .name {
+}
+
+.name {
     font-size: 18px;
     font-weight: bold;
     margin: 5px 0;
-  }
-  
-  .specialty {
+}
+
+.specialty {
     color: #666;
     font-size: 14px;
     margin-bottom: 10px;
-  }
-  
-  .infoContainer {
+}
+
+.infoContainer {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     margin-bottom: 10px;
-  }
-  
-  .experience {
+}
+
+.experience {
     font-size: 14px;
     color: #444;
-  }
-  
-  .ratingContainer {
+}
+
+.ratingContainer {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 5px;
     margin-bottom: 10px;
-  }
-  
-  .bookButton {
+}
+
+.bookButton {
     background-color: #ebeff3;
     color: rgb(16, 15, 15);
     border: none;
@@ -61,12 +62,12 @@
     font-size: 16px;
     margin: auto;
     margin-top: 1rem;
-  }
-  
-  .bookButton:hover {
+}
+
+.bookButton:hover {
     background-color: #1f4124;
     color: white;
-  }
-  .imageContainer{
+}
+.imageContainer {
     align-self: center;
-  }
+}
